--- a/index.html
+++ b/index.html
@@ -3,9 +3,181 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Arial', sans-serif;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            overflow: hidden; 
+            position: relative; 
+        }
+
+        video {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover; 
+            z-index: -1; 
+            opacity: 0.8;
+        }
+
+        .top-right-links {
+            position: absolute;
+            top: 10px;
+            right: 20px;
+            display: flex;
+            gap: 10px;
+        }
+
+        .top-right-links a {
+            text-decoration: none;
+            color: #a78234;
+            background-color: #ffffff;
+            border-radius: 25px;
+            padding: 8px 15px;
+            font-size: 0.9rem;
+            font-weight: bold;
+            transition: background-color 0.3s, color 0.3s;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            font-family: 'Georgia', serif;
+        }
+
+        .top-right-links a:hover {
+            background-color: #b28c73;
+            color: #ffffff;
+        }
+
+
+        .login-container {
+            background-color: rgba(0, 0, 0, 0.5);
+            padding: 40px;
+            border-radius: 20px;
+            width: 350px;
+            text-align: center;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+        }
+
+        .login-container h1 {
+            color: #fff;
+            font-size: 24px;
+            margin-bottom: 30px;
+        }
+
+        .input-field {
+            position: relative;
+            margin-bottom: 20px;
+        }
+
+        .input-field input {
+            width: 100%;
+            padding: 12px;
+            border: none;
+            border-radius: 25px;
+            padding-left: 40px;
+            background-color: rgba(255, 255, 255, 0.1);
+            color: #fff;
+            outline: none;
+        }
+
+        .input-field input::placeholder {
+            color: #ddd;
+        }
+
+        .input-field i {
+            position: absolute;
+            left: 15px;
+            top: 50%;
+            transform: translateY(-50%);
+            color: #fff;
+        }
+
+        .checkbox-container {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 20px;
+            color: #fff;
+            font-size: 14px;
+        }
+
+        .checkbox-container input {
+            margin-right: 5px;
+        }
+
+        .login-btn {
+            background-color: #fff;
+            color: #000;
+            padding: 12px;
+            width: 100%;
+            border: none;
+            border-radius: 25px;
+            font-size: 16px;
+            cursor: pointer;
+        }
+
+        .login-btn:hover {
+            background-color: #ddd;
+        }
+
+        .footer {
+            margin-top: 20px;
+            font-size: 14px;
+            color: #fff;
+        }
+
+        .footer a {
+            color: #fff;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        .footer a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
-    HIj
+    <video id="bgVideo" autoplay muted loop>
+        <source src="./Source/img/a.mp4" type="video/mp4">
+        .
+    </video>
+    <div class="top-right-links">
+        <a href="index.html">Home</a>
+        <a href="./Source/about.html">About</a>
+        <a href="./Source/lab.html">Lab</a>
+    </div>
+
+    <div class="login-container">
+        <h1>Login</h1>
+        <div class="input-field">
+            <i class="fa fa-user"></i>
+            <input type="text" placeholder="Username">
+        </div>
+        <div class="input-field">
+            <i class="fa fa-lock"></i>
+            <input type="password" placeholder="Password">
+        </div>
+        <div class="checkbox-container">
+            <label>
+                <input type="checkbox"> Remember me
+            </label>
+            <a href="#">Forgot password?</a>
+        </div>
+        <button class="login-btn">Login</button>
+        <div class="footer">
+            <p>Don't have an account? <a href="#">Register</a></p>
+        </div>
+    </div>
 </body>
 </html>
