--- a/Source/lab.html
+++ b/Source/lab.html
@@ -120,6 +120,7 @@
             <div class="tab" onclick="openTab('lab3')">Lab 3</div>
             <div class="tab" onclick="openTab('lab4')">Lab 4</div>
             <div class="tab" onclick="openTab('lab5')">Lab 5</div>
+            <div class="tab" onclick="openTab('lab6')">Lab 6</div>
 
         </div>
     </div>
@@ -139,6 +140,10 @@
     <div class="tab-content" id="lab5">
         <iframe src="./Lab5/lab5.html"></iframe>
     </div>
+    <div class="tab-content" id="lab6">
+        <iframe src="./Lab6/lab6.html"></iframe>
+    </div>
+
 
     <script>
         function openTab(tabName) {
