--- a/Source/lab.html
+++ b/Source/lab.html
@@ -126,10 +126,10 @@
     </div>
 
     <div class="tab-content" id="lab1">
-        <iframe src="./Lab1/main.html"></iframe>
+        <iframe src="./Lab1/lab1.html"></iframe>
     </div>
     <div class="tab-content" id="lab2">
-        <iframe src="./Lab2/main.html"></iframe>
+        <iframe src="./Lab2/lab2.html"></iframe>
     </div>
     <div class="tab-content" id="lab3">
         <iframe src="./Lab3/lab3.html"></iframe>
