--- a/Source/about.html
+++ b/Source/about.html
@@ -147,7 +147,7 @@
 </head>
 <body>
     <div class="top-right-links">
-        <a href="../index.html">Home</a> 
+        <a href="../loginlogin.html">Home</a> 
         <a href="./about.html">About</a>
         <a href="./lab.html">Lab</a> 
     </div>
