--- a/Source/lab.html
+++ b/Source/lab.html
@@ -108,7 +108,7 @@
 <body>
 
     <div class="top-right-links">
-        <a href="../index.html">Home</a>
+        <a href="../loginlogin.html">Home</a>
         <a href="about.html">About</a>
         <a href="lab.html">Lab</a>
     </div>
