--- a/index.html
+++ b/index.html
@@ -3,181 +3,138 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Welcome Design</title>
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
         body {
             font-family: 'Arial', sans-serif;
-            height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
-            overflow: hidden; 
-            position: relative; 
+            height: 100vh;
+            margin: 0;
+            background-color: #f2f4f7; /* Màu nền nhẹ nhàng */
+            overflow: hidden;
         }
 
-        video {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            object-fit: cover; 
-            z-index: -1; 
-            opacity: 0.8;
-        }
-
-        .top-right-links {
-            position: absolute;
-            top: 10px;
-            right: 20px;
-            display: flex;
-            gap: 10px;
-        }
-
-        .top-right-links a {
-            text-decoration: none;
-            color: #a78234;
-            background-color: #ffffff;
-            border-radius: 25px;
-            padding: 8px 15px;
-            font-size: 0.9rem;
-            font-weight: bold;
-            transition: background-color 0.3s, color 0.3s;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            font-family: 'Georgia', serif;
-        }
-
-        .top-right-links a:hover {
-            background-color: #b28c73;
-            color: #ffffff;
-        }
-
-
-        .login-container {
-            background-color: rgba(0, 0, 0, 0.5);
-            padding: 40px;
-            border-radius: 20px;
-            width: 350px;
-            text-align: center;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
-        }
-
-        .login-container h1 {
-            color: #fff;
-            font-size: 24px;
-            margin-bottom: 30px;
-        }
-
-        .input-field {
+        .welcome-container {
             position: relative;
-            margin-bottom: 20px;
+            text-align: center;
+            width: 800px;
+            height: 600px; /* Tăng chiều cao để căn giữa theo chiều dọc */
         }
 
-        .input-field input {
-            width: 100%;
-            padding: 12px;
-            border: none;
-            border-radius: 25px;
-            padding-left: 40px;
-            background-color: rgba(255, 255, 255, 0.1);
-            color: #fff;
-            outline: none;
-        }
-
-        .input-field input::placeholder {
-            color: #ddd;
-        }
-
-        .input-field i {
+        .circle {
             position: absolute;
-            left: 15px;
-            top: 50%;
-            transform: translateY(-50%);
-            color: #fff;
+            width: 400px;
+            height: 400px;
+            border-radius: 50%;
+            opacity: 0.9;
+            animation: float 6s infinite ease-in-out;
         }
 
-        .checkbox-container {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 20px;
-            color: #fff;
-            font-size: 14px;
+        .circle:nth-child(1) {
+            background-color: #ff8a80; /* Màu đỏ nhạt */
+            left: -100px;
+            top: 100px; /* Căn chỉnh hình tròn dọc */
+            animation-delay: 0s;
         }
 
-        .checkbox-container input {
-            margin-right: 5px;
+        .circle:nth-child(2) {
+            background-color: #ffd180; /* Màu cam nhạt */
+            left: 200px;
+            top: 100px;
+            animation-delay: 1s;
         }
 
-        .login-btn {
-            background-color: #fff;
-            color: #000;
-            padding: 12px;
-            width: 100%;
-            border: none;
-            border-radius: 25px;
-            font-size: 16px;
-            cursor: pointer;
+        .circle:nth-child(3) {
+            background-color: #ffff8d; /* Màu vàng nhạt */
+            left: 500px;
+            top: 100px;
+            animation-delay: 2s;
         }
 
-        .login-btn:hover {
-            background-color: #ddd;
+        .circle:nth-child(4) {
+            background-color: #a7ffeb; /* Màu xanh nhạt */
+            left: 800px;
+            top: 100px;
+            animation-delay: 3s;
         }
 
-        .footer {
-            margin-top: 20px;
-            font-size: 14px;
-            color: #fff;
+        @keyframes float {
+            0%, 100% {
+                transform: translateY(0);
+            }
+            50% {
+                transform: translateY(-20px);
+            }
         }
 
-        .footer a {
-            color: #fff;
-            text-decoration: none;
+        .text {
+            position: absolute;
+            top: 40%; /* Đưa chữ "Welcome" vào giữa */
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-size: 100px; /* Kích thước chữ lớn */
             font-weight: bold;
+            color: #ffffff; /* Màu chữ trắng */
+            text-transform: uppercase;
+            animation: bounce 2s infinite;
         }
 
-        .footer a:hover {
-            text-decoration: underline;
+        .start-btn {
+            position: absolute;
+            top: 60%; /* Đưa nút "Start" cách đều dòng chữ theo chiều dọc */
+            left: 50%;
+            transform: translate(-50%, -50%);
+            display: inline-block;
+            padding: 15px 40px;
+            font-size: 24px;
+            font-weight: bold;
+            color: white;
+            background-color: #00796b; /* Màu xanh đậm */
+            border: none;
+            border-radius: 30px;
+            cursor: pointer;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+            text-transform: uppercase;
+            animation: fadeIn 2s ease-in-out;
+            transition: background-color 0.3s, transform 0.2s;
+            text-decoration: none; /* Bỏ gạch chân nếu dùng thẻ <a> */
+        }
+
+        .start-btn:hover {
+            background-color: #004d40; /* Màu xanh đậm hơn khi hover */
+            transform: scale(1.1); /* Hiệu ứng phóng to khi hover */
+        }
+
+        @keyframes bounce {
+            0%, 100% {
+                transform: scale(1);
+            }
+            50% {
+                transform: scale(1.1);
+            }
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+            }
+            to {
+                opacity: 1;
+            }
         }
     </style>
 </head>
 <body>
-    <video id="bgVideo" autoplay muted loop>
-        <source src="./Source/img/a.mp4" type="video/mp4">
-        .
-    </video>
-    <div class="top-right-links">
-        <a href="index.html">Home</a>
-        <a href="./Source/about.html">About</a>
-        <a href="./Source/lab.html">Lab</a>
-    </div>
-
-    <div class="login-container">
-        <h1>Login</h1>
-        <div class="input-field">
-            <i class="fa fa-user"></i>
-            <input type="text" placeholder="Username">
-        </div>
-        <div class="input-field">
-            <i class="fa fa-lock"></i>
-            <input type="password" placeholder="Password">
-        </div>
-        <div class="checkbox-container">
-            <label>
-                <input type="checkbox"> Remember me
-            </label>
-            <a href="#">Forgot password?</a>
-        </div>
-        <button class="login-btn">Login</button>
-        <div class="footer">
-            <p>Don't have an account? <a href="#">Register</a></p>
-        </div>
+    <div class="welcome-container">
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="text">Welcome</div>
+        <!-- Nút Start dẫn đến next-page.html -->
+        <a href="login.html" class="start-btn">Start</a>
     </div>
 </body>
 </html>
