--- a/login.html
+++ b/login.html
@@ -153,7 +153,7 @@
         .
     </video>
     <div class="top-right-links">
-        <a href="loginlogin.html">Home</a>
+        <a href="login.html">Home</a>
         <a href="./Source/about.html">About</a>
         <a href="./Source/lab.html">Lab</a>
     </div>
