--- a/Source/about.html
+++ b/Source/about.html
@@ -147,9 +147,11 @@
 </head>
 <body>
     <div class="top-right-links">
-        <a href="../loginlogin.html">Home</a> 
+        <a href="../login.html">Home</a> 
         <a href="./about.html">About</a>
         <a href="./lab.html">Lab</a> 
+        <a href="Result/index.html">Result</a>
+
     </div>
 
     <div class="container">
