--- a/login.html
+++ b/login.html
@@ -156,6 +156,8 @@
         <a href="login.html">Home</a>
         <a href="./Source/about.html">About</a>
         <a href="./Source/lab.html">Lab</a>
+        <a href="./Source/Result/index.html">Result</a>
+
     </div>
 
     <div class="login-container">
