--- a/Source/lab.html
+++ b/Source/lab.html
@@ -111,6 +111,8 @@
         <a href="../loginlogin.html">Home</a>
         <a href="about.html">About</a>
         <a href="lab.html">Lab</a>
+        <a href="Result/index.html">Result</a>
+
     </div>
 
     <div class="tabs-container">
