--- a/Source/lab.html
+++ b/Source/lab.html
@@ -111,7 +111,7 @@
         <a href="../loginlogin.html">Home</a>
         <a href="about.html">About</a>
         <a href="lab.html">Lab</a>
-        <a href="Result/index.html">Result</a>
+        <a href="https://aitenbao2a.github.io/Result/">Result</a>
 
     </div>
 
