--- a/login.html
+++ b/login.html
@@ -156,7 +156,7 @@
         <a href="login.html">Home</a>
         <a href="./Source/about.html">About</a>
         <a href="./Source/lab.html">Lab</a>
-        <a href="./Source/Result/index.html">Result</a>
+        <a href="https://aitenbao2a.github.io/Result/">Result</a>
 
     </div>
 
