--- a/Source/about.html
+++ b/Source/about.html
@@ -150,7 +150,7 @@
         <a href="../login.html">Home</a> 
         <a href="./about.html">About</a>
         <a href="./lab.html">Lab</a> 
-        <a href="Result/index.html">Result </a>
+        <a href="https://aitenbao2a.github.io/Result/">Result </a>
 
     </div>
 
